# hayabusa-rules

./: .gitignore  CHANGELOG-Japanese.md  CHANGELOG.md  OLD-README-Japanese.md  OLD-README.md  README-Japanese.md  README.md
scripts/duplicate_id_check/: README.md  duplicate-id-check.py  pyproject.toml
scripts/duplicate_id_check/tests/: test_duplicate_id_check.py
scripts/duplicate_id_check/tests/fixtures/clean/: rule_a.yml  rule_b.yaml
scripts/duplicate_id_check/tests/fixtures/correlation/: correlation_rule.yaml
scripts/duplicate_id_check/tests/fixtures/duplicates/: rule_a.yaml  rule_b.yaml
scripts/duplicate_id_check/tests/fixtures/malformed/: broken.yml
scripts/supported_modifiers_check/: README.md  pyproject.toml  supported-modifier.py
tools/sigmac/: README-Japanese.md  README.md  convert.py  convert.sh  exclude_rule_list.txt  hayabusa.py  logsource-mapping.yml  logsource_mapping.py  pyproject.toml  requirements.txt  rule.py  splitter.py  sysmon.yaml  test_logsource_mapping.py  windows-antivirus.yaml  windows-antivirus.yml  windows-audit.yaml  windows-services.yaml  windows-services.yml
tools/sigmac/converted_rules/builtin/: win_alert_mimikatz_keywords.yml
tools/sigmac/converted_rules/builtin/application_error_reporting/: win_application_msmpeng_crash_wer.yml
tools/sigmac/converted_rules/builtin/applocker/: win_applocker_file_was_not_allowed_to_run.yml
tools/sigmac/converted_rules/builtin/appmodel_runtime/: win_appmodel_runtime_sysinternals_tools_appx_execution.yml
tools/sigmac/converted_rules/builtin/appxdeployment_server/: win_appxdeployment_server_applocker_block.yml  win_appxdeployment_server_mal_appx_names.yml  win_appxdeployment_server_policy_block.yml  win_appxdeployment_server_susp_appx_package_installation.yml  win_appxdeployment_server_susp_domains.yml  (+2 more)
tools/sigmac/test_files/test_rules/: test0001.yml  test0002.yml  test0003.yml  test0004.yml  test0005.yml  test0006.yml  test0007.yml  test0008.yml  test0009.yml  test0010.yml  test0011.yml  test0012.yml  test0013.yml  test0014.yml  test0015.yml  test0016.yml  test0017.yml  test0018.yml  test0019.yml  test0020.yml  test0021.yml  test0022.yml
(+16089 files in other folders)
