[tool.poetry]
name = "duplicate-id-check"
version = "0.1.0"
description = "Fail CI when the same rule id (UUID) is used by more than one rule."
authors = ["Yamato Security"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
