[tool.poetry]
name = "supported-modifier"
version = "0.1.0"
description = ""
authors = ["Yamato Security"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.3"
ruamel-yaml = "^0.19.1"
tabulate = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
