[tool.poetry]
name = "hayabusa rule converter"
version = "1.0.0"
description = ""
authors = ["Yamato Security"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oyaml = "^1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
